--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,6 @@ v0.1.3 - 11-24-2021:
 v0.1.4 - 11-24-2021:
     - Techies
         - Fixed username and email being case sensitive
+v0.1.5 - 11-24-2021:
+    - Goodies
+        - New global font
