--- a/changelog.txt
+++ b/changelog.txt
@@ -31,8 +31,10 @@ v0.1.5 - 11-25-2021:
         - Move standalone pages in admin directory into their own folders
 v0.1.6 - 11-26-2021:
     - Goodies
-        - Login page now shows errors under inputs
+        - Login page now shows errors under inputs instead of just reloading page
     - Techies
         - Login page now uses asyncronus script (ajax) instead of a redirect to a script
         - Removed extName attributes in business settings database and class as they will not be used
         - Removed surname from any table/class that had it as is will not be used
+        - Many fields in database changed from varchar to text for UX and encryption purposes
+        - Data encryption for sensitive data using user's password
